--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>grid</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/grid.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>grid</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+</head>
 <body>
   <div class="grid">
     <div class="unit xs-2-4 m-1-2 l-1-3">
-      <img class="img-flex" src="images/veggie-burger-1.jpg" alt="">
-      <div class="caption">
-        <p>Soft veggie burger with onion, romaine, tomato, mustard and vegan cheese.</p>
-      </div>
+      <figure>
+        <img class="img-flex" src="images/veggie-burger-1.jpg" alt="">
+        <figcaption>
+          <p>Soft veggie burger with onion, romaine, tomato, mustard and vegan cheese.</p>
+        </figcaption>
+      </figure>
     </div>
     <div class="unit xs-2-4 m-1-2 l-1-3">
-      <img class="img-flex" src="images/veggie-burger-2.jpg" alt="">
-      <div class="caption">
-        <p>Traditional veggie burger on a whole grain bun topped with sprouts.</p>
-      </div>
+      <figure>
+        <img class="img-flex" src="images/veggie-burger-2.jpg" alt="">
+        <figcaption>
+          <p>Traditional veggie burger on a whole grain bun topped with sprouts.</p>
+        </figcaption>
+      </figure>
     </div>
-    <div class="unit1 unit-xs-hidden m-hidden l-1-3">
-      <img class="img-flex" src="images/veggie-burger-3.jpg" alt="">
-      <div class="caption">
-        <p>Black bean burger with onion & lettuce, surrounded by an oat bun.</p>
-      </div>
+    <div class="unit unit-xs-hidden m-hidden l-1-3">
+      <figure>
+        <img class="img-flex" src="images/veggie-burger-3.jpg" alt="">
+        <figcaption>
+          <p>Black bean burger with onion & lettuce, surrounded by an oat bun.</p>
+        </figcaption>
+      </figure>
     </div>
   </div>
 </body>
